--- a/webClient/index.html
+++ b/webClient/index.html
@@ -7,5 +7,7 @@
     <title>Document</title>
   </head>
   <script type="module" src="./scripts/main.js"></script>
-  <body></body>
+  <body>
+    <div style="width: 20px; height: 20px; background-color: aquamarine"></div>
+  </body>
 </html>
