--- a/webClient/index.html
+++ b/webClient/index.html
@@ -8,6 +8,6 @@
   </head>
   <script type="module" src="./scripts/main.js"></script>
   <body>
-    <div style="width: 20px; height: 20px; background-color: aquamarine"></div>
+    <!-- <div style="width: 20px; height: 20px; background-color: aquamarine"></div> -->
   </body>
 </html>
